Revision history for Test-File-Contents

0.10
      - Maintainership taken by David E. Wheeler.
      - Removed `examples/simple.pl`, since it wouldn't run anyway.
      - Added prototypes to the test functions.
      - Failure diagnostics now appear after the failure message, rather than
        before.
      - Renamed `file_contents_is` and `file_contents_isnt` to
        `file_contents_eq` and `file_contents_ne`, respectively. The old names
        remain as aliases for backwards compatibility.

0.05    2007-03-20
      - Packaging fixes. No functional changes.

0.04    2005-10-26
      - Small tweaks to the packaging, mostly for CPANTS.  No functional
        changes.

0.03    2006-01-20
      - Added file_contents_isnt and file_contents_unlike and made file
        access OS-neutral (contributed by David Wheeler).

0.02    2004-08-25
      - Minor packaging fixes.

0.01    2004-08-25
      - First version, released on an unsuspecting world.
